# OpenManus-RL3

./: .gitmodules
openmanus_rl/agentgym/agentenv-openmanus/: README.md  __init__.py  pyproject.toml
openmanus_rl/agentgym/agentenv-openmanus/agentenv_openmanus/: __init__.py  base.py  environment.py  launch.py  model.py  python_execute.py  server.py
openmanus_rl/agentgym/agentenv/agentenv/envs/: __init__.py  openmanus.py  openmanusmain.py
openmanus_rl/llm_agent/: openmanus.py
