[project]
name = "agentenv_openmanus"
version = "0.0.1"
description = "Lightweight OpenManus tools environment"
authors = [{name = "Codex"}]
readme = "README.md"

[tool.poetry]
packages = [{include = "agentenv_openmanus"}]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
